--- a/src/component/name_list/index.less
+++ b/src/component/name_list/index.less
@@ -4,6 +4,16 @@
     // flex-direction: row;
     // width: 600px;
     // flex-wrap: wrap;
+    
+    // 设置Table中姓名的字体大小
+    :global {
+      .ant-table-tbody > tr > td {
+        font-size: 16px;
+      }
+      .ant-table-thead > tr > th {
+        font-size: 16px;
+      }
+    }
   }
   //   .item {
   //     margin-left: 10px;
