--- a/src/index.less
+++ b/src/index.less
@@ -7,4 +7,14 @@
   .ant-card-body {
     height: 150px;
   }
+  
+  // 设置Table中姓名的字体大小
+  .name-list-block {
+    .ant-table-tbody > tr > td {
+      font-size: 16px !important;
+    }
+    .ant-table-thead > tr > th {
+      font-size: 16px !important;
+    }
+  }
 }
