新增单字随机生成名字、导入自定义名字库的功能

--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,12 @@
+// 统一把页面留白从 body margin 挪到应用根容器，避免 Modal 打开时宽度跳变
+body {
+  margin: 0;
+}
+
 .root-9969b06-block {
+  padding: 8px;
+  box-sizing: border-box;
+
   .ant-list-item.selected {
     .ant-card-head {
       background-color: #e6f4ff;
