音韵检查逻辑新增开关

--- a/src/index.less
+++ b/src/index.less
@@ -25,4 +25,13 @@ body {
       font-size: 16px !important;
     }
   }
+
+  .compact-radio {
+    .ant-radio-button-wrapper {
+      padding: 0 8px;
+      height: 24px;
+      line-height: 22px;
+      font-size: 12px;
+    }
+  }
 }
